fix: update to newer jdk
Signed-off-by: Carlos Alexandro Becker <caarlos0@gmail.com>