@@ -1,6 +1,2 @@
 #!/bin/sh
-test "$1" = "-x" && {
-	echo "Enable experimental vm options"
-	export JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XX:+UseG1GC"
-}
-java $JAVA_OPTS Main
+java -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 Main
